Squash bug #17

--- a/project/www/css/main.css
+++ b/project/www/css/main.css
@@ -4,6 +4,7 @@ html, body {
 	height: 100%;
 	width: 100%;
 	margin: 0; 
+    margin-top: 20px; /* To account for the iOS transparent status bar */
 }
 
 .screen {
